force-app/main/default/objects/ST_ACR_Standard_Price__c/ST_ACR_Standard_Price__c.object-meta.xml
<CustomObject>
    <label>ACR Standard Price</label>
    <nameField>
        <displayFormat>ACR-{0000}</displayFormat>
        <label>ACR Standard Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACR Standard Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>