force-app/main/default/objects/ST_ACR_Standard_Price__c/fields/GenSHIP_Weight_Slab__c.field-meta.xml
<CustomField>
    <fullName>GenSHIP_Weight_Slab__c</fullName>
    <label>GenSHIP Weight Slab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ST_Gross_Weight_Slabs</valueSetName>
    </valueSet>
</CustomField>