force-app/main/default/objects/ST_ACR_Standard_Price__c/fields/ST_ACR_Package_Amount__c.field-meta.xml
<CustomField>
    <fullName>ST_ACR_Package_Amount__c</fullName>
    <label>ACR Package Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>