force-app/main/default/objects/ST_ACR_Standard_Price__c/fields/ST_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ST_Effective_Start_Date__c</fullName>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>