force-app/main/default/objects/ST_ACR_Standard_Price__c/fields/ST_Exhibition__c.field-meta.xml
<CustomField>
    <fullName>ST_Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition</label>
    <referenceTo>ST_Exhibition__c</referenceTo>
    <relationshipLabel>ACR Standard Price</relationshipLabel>
    <relationshipName>ACR_Standard_Price</relationshipName>
    <type>Lookup</type>
</CustomField>