force-app/main/default/objects/ST_ACR_Standard_Price__c/fields/ST_Origin__c.field-meta.xml
<CustomField>
    <fullName>ST_Origin__c</fullName>
    <label>Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>