force-app/main/default/objects/ST_ACR_Standard_Price__c/fields/ST_Product__c.field-meta.xml
<CustomField>
    <fullName>ST_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ACR Standard Price</relationshipLabel>
    <relationshipName>ACR_Standard_Price</relationshipName>
    <type>Lookup</type>
</CustomField>