force-app/main/default/objects/ST_ACR_Standard_Price__c/fields/ST_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>ST_Rate_Amount__c</fullName>
    <label>Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>