force-app/main/default/objects/ST_ACR_Standard_Price__c/fields/ST_Rate_UOM__c.field-meta.xml
<CustomField>
    <fullName>ST_Rate_UOM__c</fullName>
    <label>Rate UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ST_Rate_UOM</valueSetName>
    </valueSet>
</CustomField>