force-app/main/default/objects/ST_ACR_Standard_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ST_Product__c</columns>
    <columns>ST_ACR_Package_Type__c</columns>
    <columns>ST_ACR_Package_Amount__c</columns>
    <columns>ST_Rate_Amount__c</columns>
    <columns>ST_Rate_UOM__c</columns>
    <columns>ST_Minimum_Freight__c</columns>
    <columns>ST_Offline_Charge__c</columns>
    <columns>ST_Freight_on_Invoice_Value__c</columns>
    <columns>ST_Effective_Start_Date__c</columns>
    <columns>ST_Effective_End_Date__c</columns>
    <columns>ST_Origin__c</columns>
    <columns>ST_Destination__c</columns>
    <columns>ST_Liability_Coverage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>